--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@inquirer/confirm": "^0.0.28-alpha.0",
         "chalk": "^5.2.0",
         "clipboardy": "^3.0.0",
         "inquirer": "^9.1.4"
