--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "cpr-bnm",
-    "version": "1.0.9",
+    "name": "blueprnt",
+    "version": "1.1.0",
     "description": "",
     "main": "index.js",
     "type": "module",
