--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blueprnt",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "description": "",
     "main": "index.js",
     "type": "module",
@@ -8,7 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "bin": {
-        "create": "./index.js"
+        "choose-prnt": "./index.js"
     },
     "author": "",
     "license": "ISC",
